# desktop-delight

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PROJECT_SUMMARY.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml  test.yml
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: analyzer.rs  file_ops.rs  folder_compare.rs  history.rs  mod.rs  organizer.rs  renamer.rs  rules.rs  scanner.rs  settings.rs  watcher.rs
src-tauri/src/database/: mod.rs
src-tauri/src/services/: classifier.rs  mod.rs  watcher.rs
src/components/: AdvancedSearch.tsx  BackupManager.tsx  BatchRename.tsx  DesktopView.tsx  DuplicateManager.tsx  EmptyState.tsx  ExtensionSort.tsx  FileCard.tsx  FileCardSkeleton.tsx  FileContextMenu.tsx  FileDetailPanel.tsx  FolderCompare.tsx  FolderManager.tsx  HistoryPanel.tsx  KeyboardShortcutsHelp.tsx  OrganizeRulesModal.tsx  QuickLookModal.tsx  SelectionToolbar.tsx  Sidebar.tsx  SkeletonLoader.tsx
src/components/RuleManagement/: ConfirmDialog.tsx  FolderPickerInput.tsx  RulePreviewModal.tsx
src/constants/: categories.ts  errorMessages.ts  icons.ts
src/hooks/: useFileDragDrop.ts  useFileNavigation.ts  useFileSelection.ts  useKeyboardShortcuts.ts
src/lib/: tauri-api.test.ts  tauri-api.ts  types.test.ts  types.ts
src/pages/: Index.tsx
src/stores/: fileStore.ts  uiStore.ts
src/test/: setup.ts
src/utils/: errorHandler.ts
