[package]
name = "desktop-organizer-pro"
version = "1.0.0"
description = "Desktop file organizer for Windows and macOS"
authors = ["Desktop Organizer Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# File system
walkdir = "2"
notify = "6"
glob = "0.3"
trash = "4"
directories = "5"

# Utilities
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
thiserror = "1"
log = "0.4"

# Async
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
